--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 			<repositories>
 				<repository>
 					<id>public</id>
-					<name>Public Repositories</name>					
+					<name>Public Repositories</name>
 					<url>http://nexus-helbertrios.rhcloud.com/nexus/content/groups/public/</url>
 				</repository>
 			</repositories>
@@ -46,25 +46,45 @@
 
 	<build>
 		<finalName>${project.artifactId}</finalName>
+
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>${maven.compile.plugin.version}</version>
+					<configuration>
+						<source>${jdk.version}</source>
+						<target>${jdk.version}</target>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>${maven.compile.plugin.version}</version>
-				<configuration>
-					<source>${jdk.version}</source>
-					<target>${jdk.version}</target>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>github.com.helbertrios.nexusteste</groupId>
+				<artifactId>nexusteste</artifactId>
+				<version>0.0.1-SNAPSHOT</version>
+				<scope>provided</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<dependencies>
 		<dependency>
 			<groupId>github.com.helbertrios.nexusteste</groupId>
 			<artifactId>nexusteste</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
-	
+
 </project>
